[gd_scene load_steps=2 format=3 uid="uid://b1m7a3j5xjw5w"]

[ext_resource type="Script" path="res://settings_window.gd" id="1_qj26x"]

[node name="SettingsWindow" type="Window"]
title = "TR_SETTINGS_TITLE"
initial_position = 1
size = Vector2i(450, 250)
visible = false
script = ExtResource("1_qj26x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Language" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Language"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Language/HBoxContainer"]
layout_mode = 2
text = "TR_SETTINGS_LANGUAGE_LABEL"

[node name="LanguageOptionButton" type="OptionButton" parent="VBoxContainer/TabContainer/Language/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Image" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Image"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Image/GridContainer"]
layout_mode = 2
text = "TR_SETTINGS_UI_PREVIEW_SIZE"

[node name="UIPreviewSizeSlider" type="HSlider" parent="VBoxContainer/TabContainer/Image/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 500.0
max_value = 2000.0
value = 1280.0
tick_count = 15
ticks_on_borders = true

[node name="UIPreviewSizeLineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Image/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "1280"
max_length = 4
alignment = 1
virtual_keyboard_type = 2

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Image/GridContainer"]
layout_mode = 2
text = "TR_SETTINGS_DRAG_PREVIEW_SIZE"

[node name="DragPreviewSizeSlider" type="HSlider" parent="VBoxContainer/TabContainer/Image/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 100.0
max_value = 800.0
value = 400.0
tick_count = 7
ticks_on_borders = true

[node name="DragPreviewSizeLineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Image/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "400"
max_length = 4
alignment = 1
virtual_keyboard_type = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "TR_SETTINGS_SAVE_BUTTON"

[node name="InfoDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "TR_INFO_DIALOG_TITLE"
size = Vector2i(300, 100)

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
